auth/values/gateway/templates/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gateway
spec:
  selector:
    app: gateway
  servers:
    - hosts:
        - "*."
      port:
        name: http
        number: 80
        protocol: HTTP
