auth/values/gateway/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/Clusterissuer: "selfsigned-cluster-issuer"
  name: ingress
spec:
  rules:
    - host: victor.io
      http:
        paths:
          - path: /argocd
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
  defaultBackend:
    service:
      name: "argocd-server.argocd.svc.cluster.local"
      port:
        number: 80
